--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "vuerails",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
-    "turbolinks": "^5.2.0",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11",
-    "vue-turbolinks": "^2.0.4",
-    "vuelidate": "^0.7.5"
+    "@rails/webpacker": "3.5",
+    "node-sass": "^4.13.1",
+    "normalize.css": "^8.0.1",
+    "tailwindcss": "^0.7.2",
+    "vue": "^2.5.21",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.5.21",
+    "vue-turbolinks": "^2.0.3",
+    "vuelidate": "^0.7.4"
   },
-  "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "2.11.2"
   }
 }
